Fixed mobile layout breakpoint calculation

--- a/frontend/src/styles/shared/_globals.scss
+++ b/frontend/src/styles/shared/_globals.scss
@@ -1,4 +1,4 @@
-$breakpoint--desktop: 900px;
+$breakpoint--desktop: 800px;
 $header-size-mobile: 60px;
 $header-size-desktop: 100px;
 
