--- a/frontend/src/styles/shared/shared.scss
+++ b/frontend/src/styles/shared/shared.scss
@@ -13,6 +13,10 @@
 * {
   // transition: all 0.2s linear;
 }
+:root {
+  --breakpoint-desktop: #{$breakpoint--desktop}; // Desktop breakpoint variable
+}
+
 
 // ---------------------------
 // GENERAL
